list company account swagger
